[package]
name = "avt"
version = "0.8.1"
authors = ["Marcin Kulik <m@ku1ik.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
rgb = "0.8.33"

[dev-dependencies]
rand = "0.7"
proptest = "1.2.0"
criterion = "0.3"
pretty_assertions = "1.0"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "vt"
harness = false
