[package]
name = "avt"
version = "0.10.0"
edition = "2021"
authors = ["Marcin Kulik <m@ku1ik.com>"]
repository = "https://github.com/asciinema/avt"
description = "asciinema virtual terminal"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
rgb = "0.8.33"

[dev-dependencies]
rand = "0.7"
proptest = "1.2.0"
criterion = "0.3"
pretty_assertions = "1.0"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "vt"
harness = false
