[package]
name = "avt"
version = "0.14.0"
edition = "2021"
authors = ["Marcin Kulik <m@ku1ik.com>"]
repository = "https://github.com/asciinema/avt"
description = "asciinema virtual terminal"
license = "Apache-2.0"

# MSRV
rust-version = "1.70.0"

[dependencies]
rgb = "0.8.33"
unicode-width = "0.1.13"

[dev-dependencies]
rand = "0.7"
proptest = "1.2.0"
criterion = "0.3"
pretty_assertions = "1.0"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "vt"
harness = false
